Add baseline result CSV files (Qwen2.5-3B)

--- a/.gitignore
+++ b/.gitignore
@@ -1,157 +1,15 @@
-# --- Python ---
+
+outputs/
+
+logs/
 
 __pycache__/
 
-*.pyc
+*.parquet
 
-*.pyo
+*.pt
 
-*.pyd
+*.bin
 
-*.egg-info/
+*.safetensors
 
-.env
-
-.venv/
-
-venv/
-
-env/
-
-build/
-
-dist/
-
-
-
-# --- Jupyter Notebooks ---
-
-.ipynb_checkpoints/
-
-*.nbconvert.ipynb
-
-
-
-# --- Conda and virtual environments ---
-
-.conda/
-
-*.conda
-
-*.lock
-
-*.yml~
-
-
-
-# --- Logs and cache ---
-
-*.log
-
-*.out
-
-*.err
-
-*.tmp
-
-.cache/
-
-*.DS_Store
-
-
-
-# --- SLURM job output (optional but recommended) ---
-
-slurm-*.out
-
-*.sh~
-
-
-
-# --- Editor/IDE files ---
-
-.vscode/
-
-.idea/
-
-
-
-.vscode/
-
-# --- Python ---
-
-__pycache__/
-
-*.pyc
-
-*.pyo
-
-*.pyd
-
-*.egg-info/
-
-.env
-
-.venv/
-
-venv/
-
-env/
-
-build/
-
-dist/
-
-
-
-# --- Jupyter Notebooks ---
-
-.ipynb_checkpoints/
-
-*.nbconvert.ipynb
-
-
-
-# --- Conda and virtual environments ---
-
-.conda/
-
-*.conda
-
-*.lock
-
-*.yml~
-
-
-
-# --- Logs and cache ---
-
-*.log
-
-*.out
-
-*.err
-
-*.tmp
-
-.cache/
-
-*.DS_Store
-
-
-
-# --- SLURM job output (optional but recommended) ---
-
-slurm-*.out
-
-*.sh~
-
-
-
-# --- Editor/IDE files ---
-
-.vscode/
-
-.idea/
-
-.ipynb_checkpoints/
